# pico-uMIPS

./: .gitignore  CMakeLists.txt  README.md
uMIPS/: CMakeLists.txt  main.c
uMIPS/cache/: cache.c
uMIPS/config/: sd_hw_config.c  umips_config.h
uMIPS/console/: console.c  console.h  usb_descriptors.c
uMIPS/console/tusb_inc/: tusb_config.h
uMIPS/emulator/: cpu.c  cpu.h  decBus.c  ds1287.c  dz11.h  hypercall.h  main.c  mem.c  soc_pc.c  soc_rp2040.c
uMIPS/emulator/bus/: decBus.c
uMIPS/emulator/cpu/: cpu.c  cpu.h
uMIPS/emulator/dz11/: dz11.c
uMIPS/emulator/fpu/: fpu.c  fpu.h
uMIPS/emulator/memory/: mem.c  mem.h
uMIPS/emulator/rtc/: ds1287.c  ds1287.h
uMIPS/emulator/soc/: soc.h  soc_rp2040.c
uMIPS/psram/: cache.c  cache.h  cache_l2.c  cache_l2.h  casmlink.c  icache.c  icache.h  psram.S  psram.c  psram.h
uMIPS/sd/: sd.c  sd.h
uMIPS/timebase/: timebase.c
